--- a/index.html
+++ b/index.html
@@ -116,6 +116,8 @@
   letterAudio.src = `${letter}.mp3`;
   letterAudio.play();
 }.mp3`;
+  letterAudio.play();
+}.mp3`;
       letterAudio.play();
     }
 
