--- a/index.html
+++ b/index.html
@@ -94,7 +94,6 @@
 
     const letters = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ';
     let cards = [];
-    let currentIndex = 0;
     let firstCard = null;
     let lock = false;
     let score = 0;
@@ -104,7 +103,6 @@
     let mistakes = 0;
     let messagePlayed = false;
     const maxMistakes = 5;
-    const setSize = 7;
     const bgImages = [
       'https://cdn.pixabay.com/photo/2017/04/13/21/29/kids-2223656_1280.jpg',
       'https://cdn.pixabay.com/photo/2021/06/23/06/53/dinosaur-6357831_1280.jpg',
@@ -112,16 +110,8 @@
     ];
 
     function playLetterSound(letter) {
-  letter = letter.toLowerCase();
-  letterAudio.src = `${letter}.mp3`;
-  letterAudio.play();
-}.mp3`;
-  letterAudio.play();
-}.mp3`;
-  letterAudio.play();
-}.mp3`;
-  letterAudio.play();
-}.mp3`;
+      letter = letter.toLowerCase();
+      letterAudio.src = `${letter}.mp3`;
       letterAudio.play();
     }
 
@@ -150,7 +140,6 @@
       mistakes = 0;
       paused = false;
       messagePlayed = false;
-      currentIndex = 0;
       pauseBtn.textContent = '一時停止';
       scoreDisplay.textContent = 'スコア: 0';
       timerDisplay.textContent = 'タイマー: 0 秒';
@@ -168,21 +157,8 @@
       }
 
       cards = cards.sort(() => Math.random() - 0.5);
-      showNextSet();
 
-      intervalId = setInterval(() => {
-        if (!paused) {
-          timer++;
-          timerDisplay.textContent = `タイマー: ${timer} 秒`;
-        }
-      }, 1000);
-    }
-
-    function showNextSet() {
-      upperRow.innerHTML = '';
-      lowerRow.innerHTML = '';
-      const set = cards.slice(currentIndex, currentIndex + setSize * 2);
-      set.forEach(card => {
+      cards.forEach((card) => {
         const div = document.createElement('div');
         div.classList.add('card');
         div.classList.add(card.isUpper ? 'upper' : 'lower');
@@ -196,6 +172,13 @@
           lowerRow.appendChild(div);
         }
       });
+
+      intervalId = setInterval(() => {
+        if (!paused) {
+          timer++;
+          timerDisplay.textContent = `タイマー: ${timer} 秒`;
+        }
+      }, 1000);
     }
 
     function togglePause() {
@@ -225,19 +208,13 @@
             firstCard = null;
             lock = false;
 
-            const remaining = document.querySelectorAll('.card:not(.matched)').length;
-            if (remaining === 0) {
-              currentIndex += setSize * 2;
-              if (currentIndex < cards.length) {
-                showNextSet();
-              } else {
-                clearInterval(intervalId);
-                const minutes = Math.floor(timer / 60);
-                const seconds = timer % 60;
-                speak(`${minutes}分${seconds}秒でクリアしました！`, 'ja-JP');
-                document.body.style.backgroundImage = `url('${bgImages[Math.floor(Math.random() * bgImages.length)]}')`;
-                setTimeout(() => alert(`クリア！タイム: ${timer}秒、スコア: ${score}`), 500);
-              }
+            if (document.querySelectorAll('.matched').length === cards.length) {
+              clearInterval(intervalId);
+              const minutes = Math.floor(timer / 60);
+              const seconds = timer % 60;
+              speak(`${minutes}分${seconds}秒でクリアしました！`, 'ja-JP');
+              document.body.style.backgroundImage = `url('${bgImages[Math.floor(Math.random() * bgImages.length)]}')`;
+              setTimeout(() => alert(`クリア！タイム: ${timer}秒、スコア: ${score}`), 500);
             }
           }, 500);
         } else {
