--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <title>大文字小文字マッチングゲーム</title>
   <style>
     body {
+      background-image: url('bc1.jpg');
+      background-size: cover;
+      background-position: center;
       font-family: 'UD Digi Kyokasho N-R', sans-serif;$1}
     .game {
       display: flex;
