--- a/index.html
+++ b/index.html
@@ -8,14 +8,18 @@
   <style>
     body {
       background-image: url('bc1.jpg');
-      background-size: cover;
+      background-size: contain;
       background-position: top center;
       background-repeat: no-repeat;
-      padding-top: 50px;
-      background-size: cover;
-      background-position: center center;
-      background-repeat: no-repeat;
       font-family: 'UD Digi Kyokasho N-R', sans-serif;
+      margin: 0;
+      padding: 0;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-start;
+      background-color: #fffaf8;
     }
     .game {
       display: flex;
@@ -55,7 +59,14 @@
       visibility: hidden;
     }
     #controls {
-      margin: 20px;
+      margin: 20px auto;
+      background: rgba(255, 255, 255, 0.7);
+      padding: 10px 20px;
+      border-radius: 12px;
+      box-shadow: 0 0 8px rgba(0,0,0,0.1);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
     #score, #timer, #mistakes {
       font-size: 18px;
@@ -70,7 +81,7 @@
   </style>
 </head>
 <body>
-  <h1>大文字小文字マッチングゲーム</h1>
+  <h1 style="background: rgba(255,255,255,0.8); padding: 10px 20px; border-radius: 12px; box-shadow: 0 2px 6px rgba(0,0,0,0.1);">大文字小文字マッチングゲーム</h1>
   <div id="controls">
     <button onclick="startGame()">スタート</button>
     <button onclick="togglePause()" id="pauseBtn">一時停止</button>
