--- a/index.html
+++ b/index.html
@@ -60,23 +60,32 @@
     }
     #controls {
       margin: 20px auto;
-      background: rgba(255, 255, 255, 0.7);
+      background: rgba(255, 255, 255, 0.8);
       padding: 10px 20px;
       border-radius: 12px;
       box-shadow: 0 0 8px rgba(0,0,0,0.1);
       display: flex;
-      flex-direction: column;
-      align-items: center;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 10px;
+      text-align: center;
     }
     #score, #timer, #mistakes {
       font-size: 18px;
-      margin: 10px;
+      margin: 0 10px;
     }
     #restartBtn {
       display: none;
       margin-top: 20px;
       font-size: 16px;
       padding: 8px 16px;
+    }
+      @media (max-width: 600px) {
+      .card {
+        width: 45px;
+        height: 60px;
+        font-size: 18px;
+      }
     }
   </style>
 </head>
