--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=UD+Digi+Kyokasho+N-R&display=swap">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=UD+Digi+Kyokasho+N+R&display=swap">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>大文字小文字マッチングゲーム</title>
@@ -42,12 +42,8 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      font-size: 24px;
-      cursor: pointer;
-      border-radius: 8px;
-      user-select: none;
-      border: 2px solid #888;
-    }
+      font-size: 28px;
+      font-weight: bold;$1
     .card.upper {
       background-color: #fdd;
     }
@@ -84,8 +80,10 @@
       .card {
         width: 40px;
         height: 55px;
-        font-size: 16px;
+        font-size: 20px;
+        font-weight: bold;
       }
+    }
     }
     }
   </style>
