--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      font-size: 28px;
-      font-weight: bold;$1
-    .card.upper {
-      background-color: #fdd;
+      font-size: 24px;
+      font-weight: bold;
+      border-radius: 8px;
+      border: 2px solid #888;
     }
     .card.lower {
       background-color: #dfd;
@@ -80,9 +80,11 @@
       .card {
         width: 40px;
         height: 55px;
-        font-size: 20px;
+        font-size: 18px;
         font-weight: bold;
+        border-radius: 6px;
       }
+    }
     }
     }
     }
