--- a/index.html
+++ b/index.html
@@ -35,17 +35,9 @@
       gap: 10px;
       margin-bottom: 10px;
     }
-    .card {
-      width: 60px;
-      height: 80px;
-      background-color: #ccc;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 24px;
-      font-weight: bold;
-      border-radius: 8px;
-      border: 2px solid #888;
+    $1
+    .card.upper {
+      background-color: #fdd;
     }
     .card.lower {
       background-color: #dfd;
