--- a/index.html
+++ b/index.html
@@ -35,7 +35,18 @@
       gap: 10px;
       margin-bottom: 10px;
     }
-    $1
+    .card {
+      width: 60px;
+      height: 80px;
+      background-color: #ccc;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 24px;
+      font-weight: bold;
+      border-radius: 8px;
+      border: 2px solid #888;
+    }
     .card.upper {
       background-color: #fdd;
     }
@@ -70,14 +81,11 @@
     }
       @media (max-width: 600px) {
       .card {
-        width: 40px;
-        height: 55px;
+        width: 38px;
+        height: 52px;
         font-size: 18px;
         font-weight: bold;
-        border-radius: 6px;
-      }
-    }
-    }
+        border-radius: 6px;}
     }
     }
   </style>
