--- a/index.html
+++ b/index.html
@@ -83,9 +83,11 @@
       .card {
         width: 38px;
         height: 52px;
-        font-size: 18px;
+        font-size: 20px;
         font-weight: bold;
-        border-radius: 6px;}
+        border-radius: 6px;
+      }
+    }
     }
     }
   </style>
@@ -106,6 +108,7 @@
   </div>
 
   <audio id="letterAudio"></audio>
+  <audio id="pinponAudio" src="pinpon.mp3"></audio>
 
   <script>
     const upperRow = document.getElementById('upperRow');
@@ -219,7 +222,10 @@
         card.textContent = card.dataset.text;
       }
 
-      playLetterSound(card.dataset.text);
+      document.getElementById('pinponAudio').play();
+      setTimeout(() => {
+        playLetterSound(card.dataset.text);
+      }, 200);
 
       if (!firstCard) {
         firstCard = card;
