--- a/index.html
+++ b/index.html
@@ -93,13 +93,13 @@
   </style>
 </head>
 <body>
-  <h1 style="background: rgba(255,255,255,0.8); padding: 10px 20px; border-radius: 12px; box-shadow: 0 2px 6px rgba(0,0,0,0.1); font-size: 26px; color: #e91e63; font-weight: bold; font-family: 'UD Digi Kyokasho N-R', sans-serif;">💕 大文字・小文字 マッチングゲーム 💕</h1>
+  <h1 style="background: rgba(255,255,255,0.9); padding: 12px 24px; border-radius: 16px; box-shadow: 0 4px 8px rgba(0,0,0,0.15); font-size: 28px; color: #3f51b5; font-weight: bold; font-family: 'UD Digi Kyokasho N-R', sans-serif;">大文字・小文字 マッチングゲーム</h1>
   <div id="controls">
     <button onclick="startGame()" style="background-color: #ffcc00; color: #000; font-weight: bold; padding: 10px 20px; border: none; border-radius: 8px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); font-size: 18px; cursor: pointer;">スタート</button>
     <button onclick="togglePause()" id="pauseBtn">一時停止</button>
     
-    <div id="timer">タイム: 0 秒</div>
-    <div id="mistakes">ミス: 0 / 5</div>
+    <div id="timer" style="background: rgba(255,255,255,0.8); padding: 6px 12px; border-radius: 8px; font-weight: bold; color: #333;">タイム: 0 秒</div>
+    <div id="mistakes" style="background: rgba(255,255,255,0.8); padding: 6px 12px; border-radius: 8px; font-weight: bold; color: #333;">ミス: 0 / 5</div>
   </div>
   <button id="restartBtn" onclick="startGame()">再スタート</button>
   <div class="game">
