--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       font-size: 16px;
       padding: 8px 16px;
     }
-      @media (max-width: 600px) {
+    @media (max-width: 600px) {
       .card {
         width: 38px;
         height: 52px;
@@ -95,7 +95,7 @@
         font-weight: bold;
         border-radius: 6px;
       }
-      }
+    }
   </style>
 </head>
 <body>
@@ -103,7 +103,6 @@
   <div id="controls">
     <button onclick="startGame()" style="background-color: #ffcc00; color: #000; font-weight: bold; padding: 10px 20px; border: none; border-radius: 8px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); font-size: 18px; cursor: pointer;">スタート</button>
     <button onclick="togglePause()" id="pauseBtn">一時停止</button>
-    
     <div id="timer" style="background: rgba(255,255,255,0.8); padding: 6px 12px; border-radius: 8px; font-weight: bold; color: #333;">タイム: 0 秒</div>
     <div id="mistakes" style="background: rgba(255,255,255,0.8); padding: 6px 12px; border-radius: 8px; font-weight: bold; color: #333;">ミス: 0 / 5</div>
   </div>
@@ -115,132 +114,116 @@
 
   <audio id="letterAudio"></audio>
   <audio id="pinponAudio" src="pinpon.mp3"></audio>
+  <audio id="clearAudio" src="gameclear.mp3"></audio>
 
-  <script>
-    const upperRow = document.getElementById('upperRow');
-    const lowerRow = document.getElementById('lowerRow');
-        const timerDisplay = document.getElementById('timer');
-    const mistakeDisplay = document.getElementById('mistakes');
-    const pauseBtn = document.getElementById('pauseBtn');
-    const restartBtn = document.getElementById('restartBtn');
-    const letterAudio = document.getElementById('letterAudio');
+<script>
+  const upperRow = document.getElementById('upperRow');
+  const lowerRow = document.getElementById('lowerRow');
+  const timerDisplay = document.getElementById('timer');
+  const mistakeDisplay = document.getElementById('mistakes');
+  const pauseBtn = document.getElementById('pauseBtn');
+  const restartBtn = document.getElementById('restartBtn');
+  const letterAudio = document.getElementById('letterAudio');
 
-    const letters = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ';
-    let cards = [];
-    let firstCard = null;
-    let lock = false;
-        let timer = 0;
-    let intervalId = null;
-    let paused = false;
-    let mistakes = 0;
-    let messagePlayed = false;
-    const maxMistakes = 5;
-    const bgImages = [
-      'https://cdn.pixabay.com/photo/2017/04/13/21/29/kids-2223656_1280.jpg',
-      'https://cdn.pixabay.com/photo/2021/06/23/06/53/dinosaur-6357831_1280.jpg',
-      'https://cdn.pixabay.com/photo/2016/05/31/18/54/cartoon-1428435_1280.png'
-    ];
+  const letters = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ';
+  let cards = [];
+  let firstCard = null;
+  let lock = false;
+  let timer = 0;
+  let intervalId = null;
+  let paused = false;
+  let mistakes = 0;
+  let messagePlayed = false;
+  const maxMistakes = 5;
 
-    function playLetterSound(letter) {
-      letter = letter.toLowerCase();
-      letterAudio.src = `${letter}.mp3`;
-      letterAudio.play();
-    }
-
-    function speak(text, lang = 'en-US') {
-      const msg = new SpeechSynthesisUtterance(text);
-      msg.lang = lang;
-      const voices = speechSynthesis.getVoices();
-      const voice = voices.find(v => v.lang === lang);
-      if (voice) {
-        msg.voice = voice;
-      }
-      window.speechSynthesis.speak(msg);
-    }
-
-    window.speechSynthesis.onvoiceschanged = () => {
-      speak('', 'en-US');
-    };
-
-    function startGame() {
-      clearInterval(intervalId);
-      // 背景画像を消さずに維持するよう変更
-      // document.body.style.backgroundImage = 'none';
-      upperRow.innerHTML = '';
-      lowerRow.innerHTML = '';
-            timer = 0;
-      mistakes = 0;
-      paused = false;
-      messagePlayed = false;
-      pauseBtn.textContent = '一時停止';
-            timerDisplay.textContent = 'タイム: 0 秒';
-      mistakeDisplay.textContent = `ミス: 0 / ${maxMistakes}`;
-      restartBtn.style.display = 'none';
-      firstCard = null;
-      lock = false;
-      cards = [];
-
-      for (let i = 0; i < 26; i++) {
-        const upper = letters[i];
-        const lower = letters[i].toLowerCase();
-        cards.push({ text: upper, matchKey: upper, isUpper: true });
-        cards.push({ text: lower, matchKey: upper, isUpper: false });
-      }
-
-      cards = cards.sort(() => Math.random() - 0.5);
-
-      
-
-      cards.forEach((card) => {
-        const div = document.createElement('div');
-        div.classList.add('card');
-        div.classList.add(card.isUpper ? 'upper' : 'lower');
-        div.dataset.text = card.text;
-        div.dataset.matchKey = card.matchKey;
-        div.textContent = card.text;
-        div.style.color = '#000';
-        div.style.backgroundImage = 'none';
-        div.style.backgroundColor = card.isUpper ? '#fdd' : '#dfd';
-        div.addEventListener('click', () => flipCard(div));
-        if (card.isUpper) {
-          upperRow.appendChild(div);
-        } else {
-          lowerRow.appendChild(div);
-        }
-      });
-
-      intervalId = setInterval(() => {
-        if (!paused) {
-          timer++;
-          timerDisplay.textContent = `タイム: ${timer} 秒`;
-        }
-      }, 1000);
-    }
-
-    function togglePause() {
-      paused = !paused;
-      pauseBtn.textContent = paused ? '再開' : '一時停止';
-    }
-
-    function flipCard(card) {
-  if (lock || card.classList.contains('matched') || paused) return;
-
-  if (!card.textContent) {
-    card.textContent = card.dataset.text;
-    card.style.color = '#000';
-    card.style.backgroundImage = 'none';
-    card.style.backgroundColor = card.classList.contains('upper') ? '#fdd' : '#dfd';
+  function playLetterSound(letter) {
+    letter = letter.toLowerCase();
+    letterAudio.src = `${letter}.mp3`;
+    letterAudio.play();
   }
 
-  document.getElementById('pinponAudio').play();
-  setTimeout(() => {
-    playLetterSound(card.dataset.text);
-  }, 200);
+  function speak(text, lang = 'ja-JP') {
+    const msg = new SpeechSynthesisUtterance(text);
+    msg.lang = lang;
+    const voices = speechSynthesis.getVoices();
+    const voice = voices.find(v => v.lang === lang);
+    if (voice) msg.voice = voice;
+    window.speechSynthesis.speak(msg);
+  }
 
-  if (!firstCard) {
-    firstCard = card;
-  } else {
+  window.speechSynthesis.onvoiceschanged = () => speak('');
+
+  function startGame() {
+    clearInterval(intervalId);
+    upperRow.innerHTML = '';
+    lowerRow.innerHTML = '';
+    timer = 0;
+    mistakes = 0;
+    paused = false;
+    messagePlayed = false;
+    pauseBtn.textContent = '一時停止';
+    timerDisplay.textContent = 'タイム: 0 秒';
+    mistakeDisplay.textContent = `ミス: 0 / ${maxMistakes}`;
+    restartBtn.style.display = 'none';
+    firstCard = null;
+    lock = false;
+    cards = [];
+
+    for (let i = 0; i < 26; i++) {
+      const upper = letters[i];
+      const lower = letters[i].toLowerCase();
+      cards.push({ text: upper, matchKey: upper, isUpper: true });
+      cards.push({ text: lower, matchKey: upper, isUpper: false });
+    }
+
+    cards.sort(() => Math.random() - 0.5);
+
+    cards.forEach(card => {
+      const div = document.createElement('div');
+      div.classList.add('card', card.isUpper ? 'upper' : 'lower');
+      div.dataset.text = card.text;
+      div.dataset.matchKey = card.matchKey;
+      div.textContent = card.text;
+      div.style.color = '#000';
+      div.style.backgroundImage = 'none';
+      div.style.backgroundColor = card.isUpper ? '#fdd' : '#dfd';
+      div.addEventListener('click', () => flipCard(div));
+      (card.isUpper ? upperRow : lowerRow).appendChild(div);
+    });
+
+    intervalId = setInterval(() => {
+      if (!paused) {
+        timer++;
+        timerDisplay.textContent = `タイム: ${timer} 秒`;
+      }
+    }, 1000);
+  }
+
+  function togglePause() {
+    paused = !paused;
+    pauseBtn.textContent = paused ? '再開' : '一時停止';
+  }
+
+  function flipCard(card) {
+    if (lock || card.classList.contains('matched') || paused) return;
+
+    if (!card.textContent) {
+      card.textContent = card.dataset.text;
+      card.style.color = '#000';
+      card.style.backgroundImage = 'none';
+      card.style.backgroundColor = card.classList.contains('upper') ? '#fdd' : '#dfd';
+    }
+
+    document.getElementById('pinponAudio').play();
+    setTimeout(() => playLetterSound(card.dataset.text), 200);
+
+    if (!firstCard) {
+      firstCard = card;
+      return;
+    }
+
     lock = true;
+
     if (firstCard.dataset.matchKey === card.dataset.matchKey && firstCard !== card) {
       const remainingCards = document.querySelectorAll('.card:not(.matched)').length;
       if (remainingCards <= 10 && !messagePlayed) {
@@ -250,11 +233,7 @@
           document.querySelectorAll('.card:not(.matched)').forEach(c => {
             c.textContent = '';
             c.style.color = 'transparent';
-            if (c.classList.contains('upper')) {
-              c.style.backgroundImage = "url('red.png')";
-            } else {
-              c.style.backgroundImage = "url('green.png')";
-            }
+            c.style.backgroundImage = c.classList.contains('upper') ? "url('red.png')" : "url('green.png')";
           });
         }, 1000);
       }
@@ -270,9 +249,7 @@
           const minutes = Math.floor(timer / 60);
           const seconds = timer % 60;
           document.getElementById('clearAudio').play();
-          setTimeout(() => {
-            speak(`${minutes}分${seconds}秒でクリアしました！`, 'ja-JP');
-          }, 1500);
+          setTimeout(() => speak(`${minutes}分${seconds}秒でクリアしました！`, 'ja-JP'), 1500);
           setTimeout(() => alert(`クリア！タイム: ${timer}秒`), 500);
         }
       }, 500);
@@ -289,18 +266,27 @@
         return;
       }
 
-
-      // 2 枚はそのまま表向きに残す
-      setTimeout(() => {
-        firstCard = null;   // 選択状態をリセット
-        lock = false;       // 次のクリックを許可
-      }, 500);              // 少し間を置くだけでOK
-
-
+      const remaining = document.querySelectorAll('.card:not(.matched)').length;
+      if (remaining <= 10) {
+        // 残り 10 枚以下なら 2 枚だけ裏返す
+        setTimeout(() => {
+          [firstCard, card].forEach(c => {
+            c.textContent = '';
+            c.style.color = 'transparent';
+            c.style.backgroundImage = c.classList.contains('upper') ? "url('red.png')" : "url('green.png')";
+          });
+          firstCard = null;
+          lock = false;
+        }, 800);
+      } else {
+        // それ以外は裏返さず表のまま残す
+        setTimeout(() => {
+          firstCard = null;
+          lock = false;
+        }, 300);
+      }
     }
   }
-}
-  </script>
-  <audio id="clearAudio" src="gameclear.mp3"></audio>
+</script>
 </body>
 </html>
